bug: fix layout issue caused by iframes for refreshing tokens

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+
+#angular-oauth-oidc-silent-refresh-iframe {
+    display: none;
+}
+
+#angular-oauth-oidc-check-session-iframe{
+    display: none;
+}
